Add Sparkle public key

--- a/OpenHere/Info.plist
+++ b/OpenHere/Info.plist
@@ -47,5 +47,7 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>SUPublicDSAKeyFile</key>
+	<string>sparkle_dsa_pub.pem</string>
 </dict>
 </plist>
