Add appcast URL

--- a/OpenHere/Info.plist
+++ b/OpenHere/Info.plist
@@ -47,6 +47,8 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>SUFeedURL</key>
+	<string>https://raw.githubusercontent.com/marcisme/OpenHere/master/appcast.xml</string>
 	<key>SUPublicDSAKeyFile</key>
 	<string>sparkle_dsa_pub.pem</string>
 </dict>
